<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.FormTaskFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:navigationIcon="@drawable/back">

                    <TextView
                        android:id="@+id/text_toolbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Criar Nova Tarefa"
                        android:textSize="16dp"
                        android:textColor="@color/white"
                        android:layout_gravity="center"/>

                </com.google.android.material.appbar.MaterialToolbar>
            </com.google.android.material.appbar.AppBarLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/description_new_task_fragment"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextTheme"
                android:layout_marginTop="5dp"
                android:hint="@string/create_a_new_task_new_task_fragment" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/status_new_task_fragment"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/rbGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:theme="@style/CustomRbutton">

                <RadioButton
                    android:id="@+id/rbTodo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/to_do_new_task_fragment"
                    android:checked="true"
                    android:textColor="@color/white"
                    app:colorControlActivated="@color/black" />

                <RadioButton
                    android:id="@+id/rbDoing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/doing_new_task_fragment"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rbDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/done_new_task_fragment"
                    android:textColor="@color/white" />

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_NewTask"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textAllCaps="false"
                android:background="@drawable/bg_btn"
                android:layout_marginTop="15dp"
                app:backgroundTint="@null"
                android:textColor="@color/color_default"
                android:text="@string/save_new_task_fragment" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                tools:visibility="visible"
                android:layout_gravity="center"/>
        </LinearLayout>



    </LinearLayout>

</ScrollView>