<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="10dp"
            android:paddingHorizontal="8dp"
            tools:layout_editor_absoluteX="-17dp"
            tools:layout_editor_absoluteY="44dp">

            <TextView
                android:id="@+id/txt_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/criar_layout_da_tela_de_login_do_app"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit_task"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:background="@color/blue"
                android:text="@string/editar"
                android:textSize="12sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_details_task"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_remover_task"
                app:layout_constraintTop_toBottomOf="@+id/txt_task_title"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_remover_task"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:background="@color/red"
                android:gravity="center"
                android:text="@string/remover"
                android:textSize="11sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit_task"
                app:layout_constraintEnd_toStartOf="@+id/btn_edit_task"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_edit_task"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_details_task"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:background="@color/green"
                android:text="@string/detalhes"
                android:textSize="12sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit_task"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_edit_task"
                app:layout_constraintTop_toTopOf="@+id/btn_edit_task"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>